security/mtls/envoy-mtls.yaml
# Envoy Proxy mTLS 配置
# 用于服务间通信的双向TLS

static_resources:
  listeners:
    - name: listener_mtls
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/qilin/certs/${SERVICE_NAME}-cert.pem
                    private_key:
                      filename: /etc/qilin/certs/${SERVICE_NAME}-key.pem
                validation_context:
                  trusted_ca:
                    filename: /etc/qilin/certs/ca-cert.pem
                  match_typed_subject_alt_names:
                    - san_type: DNS
                      matcher:
                        exact: "*.svc.cluster.local"

  clusters:
    - name: service_backend
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/qilin/certs/${SERVICE_NAME}-cert.pem
                private_key:
                  filename: /etc/qilin/certs/${SERVICE_NAME}-key.pem
            validation_context:
              trusted_ca:
                filename: /etc/qilin/certs/ca-cert.pem

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
